// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks view matches snapshot 1`] = `
.c0 {
  width: 100%;
}

.c0 td {
  border-top: 1px #f1f2f3 solid;
  font-size: 14px;
  font-weight: 400;
  padding: 8px 8px 8px 24px;
  color: #171A1C;
  vertical-align: middle;
}

.c0 tbody > tr:hover {
  background-color: #F1F2F3;
}

.c1 {
  padding: 4px 0 4px 24px !important;
  border-bottom-width: 1px !important;
  vertical-align: middle !important;
}

.c1.is-clickable {
  cursor: pointer !important;
  pointer-events: all !important;
}

.c1.has-text-link-dark span {
  color: #4F4FFF !important;
}

.c1 span {
  font-family: Inter,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  text-align: left;
  background: #FFFFFF;
  color: #73848C;
}

.c1 span.preview {
  margin-left: 8px;
  font-size: 14px;
  color: #4F4FFF;
  cursor: pointer;
}

.c1 span.is-clickable {
  cursor: pointer !important;
  pointer-events: all !important;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th
        className="c1"
        title="ID"
      >
        <span
          className="title"
        >
          ID
        </span>
      </th>
      <th
        className="c1"
        title="Worker"
      >
        <span
          className="title"
        >
          Worker
        </span>
      </th>
      <th
        className="c1"
        title="State"
      >
        <span
          className="title"
        >
          State
        </span>
      </th>
      <th
        className="c1"
        title="Trace"
      >
        <span
          className="title"
        >
          Trace
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="title"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      task={
        Object {
          "config": Object {
            "batch.size": "2000",
            "file": "/some/file",
            "task.class": "org.apache.kafka.connect.file.FileStreamSourceTask",
            "topic": "test-topic",
          },
          "id": Object {
            "connector": "first",
            "task": 1,
          },
          "status": Object {
            "id": 1,
            "state": "RUNNING",
            "workerId": "kafka-connect0:8083",
          },
        }
      }
    />
    <tr
      task={
        Object {
          "config": Object {
            "batch.size": "1000",
            "file": "/some/file2",
            "task.class": "org.apache.kafka.connect.file.FileStreamSourceTask",
            "topic": "test-topic",
          },
          "id": Object {
            "connector": "first",
            "task": 2,
          },
          "status": Object {
            "id": 2,
            "state": "FAILED",
            "trace": "Failure 1",
            "workerId": "kafka-connect0:8083",
          },
        }
      }
    />
    <tr
      task={
        Object {
          "config": Object {
            "batch.size": "3000",
            "file": "/some/file3",
            "task.class": "org.apache.kafka.connect.file.FileStreamSourceTask",
            "topic": "test-topic",
          },
          "id": Object {
            "connector": "first",
            "task": 3,
          },
          "status": Object {
            "id": 3,
            "state": "RUNNING",
            "workerId": "kafka-connect0:8083",
          },
        }
      }
    />
  </tbody>
</table>
`;

exports[`Tasks view matches snapshot when fetching tasks 1`] = `<mock-PageLoader />`;

exports[`Tasks view matches snapshot when no tasks 1`] = `
.c0 {
  width: 100%;
}

.c0 td {
  border-top: 1px #f1f2f3 solid;
  font-size: 14px;
  font-weight: 400;
  padding: 8px 8px 8px 24px;
  color: #171A1C;
  vertical-align: middle;
}

.c0 tbody > tr:hover {
  background-color: #F1F2F3;
}

.c1 {
  padding: 4px 0 4px 24px !important;
  border-bottom-width: 1px !important;
  vertical-align: middle !important;
}

.c1.is-clickable {
  cursor: pointer !important;
  pointer-events: all !important;
}

.c1.has-text-link-dark span {
  color: #4F4FFF !important;
}

.c1 span {
  font-family: Inter,sans-serif;
  font-size: 12px;
  font-style: normal;
  font-weight: 400;
  line-height: 16px;
  -webkit-letter-spacing: 0em;
  -moz-letter-spacing: 0em;
  -ms-letter-spacing: 0em;
  letter-spacing: 0em;
  text-align: left;
  background: #FFFFFF;
  color: #73848C;
}

.c1 span.preview {
  margin-left: 8px;
  font-size: 14px;
  color: #4F4FFF;
  cursor: pointer;
}

.c1 span.is-clickable {
  cursor: pointer !important;
  pointer-events: all !important;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th
        className="c1"
        title="ID"
      >
        <span
          className="title"
        >
          ID
        </span>
      </th>
      <th
        className="c1"
        title="Worker"
      >
        <span
          className="title"
        >
          Worker
        </span>
      </th>
      <th
        className="c1"
        title="State"
      >
        <span
          className="title"
        >
          State
        </span>
      </th>
      <th
        className="c1"
        title="Trace"
      >
        <span
          className="title"
        >
          Trace
        </span>
      </th>
      <th
        className="c1"
      >
        <span
          className="title"
        />
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        colSpan={10}
      >
        No tasks found
      </td>
    </tr>
  </tbody>
</table>
`;
